crates/sotf-plugins/tests/snapshots/render_plan_snapshots__gate__gate__desktop_800.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "gate",
  "width": 800.0,
  "orientation": "horizontal",
  "knob_size": "sm",
  "group_direction": "row",
  "slider_height": 120.0,
  "show_visualizations": false,
  "columns_visible": [
    "config",
    "main",
    "output"
  ],
  "columns_collapsed": [],
  "config_controls": [
    {
      "param_index": 6,
      "param_name": "Link Channels",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    },
    {
      "param_index": 7,
      "param_name": "Sidechain HPF",
      "control_type": "knob",
      "unit": "Hz",
      "range": [
        0.0,
        200.0
      ],
      "read_only": false
    },
    {
      "param_index": 8,
      "param_name": "HPF Order",
      "control_type": "selector",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    },
    {
      "param_index": 9,
      "param_name": "Detection",
      "control_type": "selector",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    }
  ],
  "main_groups": [
    {
      "title": "DYNAMICS",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Threshold",
          "control_type": "vertical_slider",
          "unit": "dB",
          "range": [
            -80.0,
            0.0
          ],
          "read_only": false
        },
        {
          "param_index": 1,
          "param_name": "Ratio",
          "control_type": "vertical_slider",
          "unit": ":1",
          "range": [
            1.0,
            100.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "title": "TIMING",
      "controls": [
        {
          "param_index": 2,
          "param_name": "Attack",
          "control_type": "vertical_slider",
          "unit": "ms",
          "range": [
            0.1,
            50.0
          ],
          "read_only": false
        },
        {
          "param_index": 3,
          "param_name": "Hold",
          "control_type": "vertical_slider",
          "unit": "ms",
          "range": [
            0.0,
            1000.0
          ],
          "read_only": false
        },
        {
          "param_index": 4,
          "param_name": "Release",
          "control_type": "vertical_slider",
          "unit": "ms",
          "range": [
            10.0,
            2000.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [
    {
      "param_index": 18446744073709551615,
      "param_name": "(meter)",
      "control_type": "bar_meter(-30..0)",
      "unit": "",
      "range": null,
      "read_only": true
    },
    {
      "param_index": 5,
      "param_name": "Mix",
      "control_type": "knob",
      "unit": "%",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    }
  ],
  "tabs": [],
  "viz_slots": [
    {
      "viz_type": "transfer_curve",
      "position": "below:DYNAMICS"
    }
  ],
  "dynamic_sections": []
}
